--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ round-avatar: true
 social-network-links:
   email: "elandgre@gmail.com"
   twitter: EricLandgrebe
-  linkedin: daattali
+  linkedin: eric-landgrebe-959698169
 #  facebook: deanattali
 #  github: daattali
 #  patreon: DeanAttali
@@ -74,12 +74,12 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
 
 # --- General options --- #
 
 # Select which social network share links to show in posts
 share-links-active:
+  email: true
   twitter: true
   linkedin: true
   vk: false
