--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,7 @@ author: Eric Landgrebe
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Resume: "resume"
 
 # --- Logo --- #
 
