--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "ericlandgrebe.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -95,7 +95,7 @@ feed_show_excerpt: true
 feed_show_tags: true
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "Eric Landgrebe, Eric, Landgrebe, Machine Learning, AI, ML, Software Engineering, AI Safety, AI Alignment"
 
 # --- Colours / background image --- #
 
